<resources>
    <string name="app_name" translatable="false">CityHelper</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="noteList">Note List</string>
    <string name="createNewNote">Create a new note</string>
    <string name="login">Login</string>
    <string name="seeNotes">See Notes</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="createNote">Create Note</string>
    <string name="editNote">Edit Note</string>
    <string name="deleteNote">Delete Note</string>
    <string name="sureDeleteNote">Are you sure you want to delete the note </string>
    <string name="lastModified">Last modified:</string>
    <string name="noTitle">The title cannot be empty</string>
    <string name="noDescription">The description cannot be empty</string>
    <string name="title_activity_report_map">Map</string>
    <string name="failedLogin">Invalid credentials</string>
    <string name="noUsername">The username cannot be empty</string>
    <string name="noPassword">The password cannot be empty</string>
    <string name="keepMeLogged">Keep me logged in</string>
    <string name="preferenceFile" translatable="false">prefFile</string>
    <string name="usernameP" translatable="false">usernameP</string>
    <string name="passwordP" translatable="false">passwordP</string>
    <string name="reportMap">Report Map</string>
    <string name="logout">Logout</string>
    <string name="failedGetReports">Failed to get reports</string>
    <string name="typeDisplay">Type:</string>
    <string name="createdIn">Created in:</string>
    <string name="failedGetImage">Failed to get the image</string>
    <string name="distance">Distance:</string>
    <string-array name="typeFilter">
        <item name="all">All</item>
        <item name="accident">Accident</item>
        <item name="obras">Construction</item>
        <item name="other">Other</item>
    </string-array>
    <string-array name="typeFilterCreate">
        <item name="accident">Accident</item>
        <item name="obras">Construction</item>
        <item name="other">Other</item>
    </string-array>
    <string name="accident">Accident</string>
    <string name="construction">Construction</string>
    <string name="other">Other</string>
    <string name="negativeDistance">The distance value has to be positive</string>
    <string name="createReport">Create Report</string>
    <string name="type">Type</string>
    <string name="image">Image</string>
    <string name="clearImage">Clear Image</string>
    <string name="photoError">Could not take the photo</string>
    <string name="noImage">No image was selected for this report</string>
    <string name="errorCreatingReport">There was an error while creating the report</string>
    <string name="successCreatingReport">Report was created successfully</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="createdBy">Created by user:</string>
    <string name="sureDeleteReport">Are you sure you want to delete the report</string>
    <string name="deleteReport">Delete Report</string>
    <string name="errorDeletingReport">There was an error while deleting the report</string>
    <string name="successDeletingReport">Report was deleted successfully</string>
    <string name="errorUpdatingReport">There was an error while updating the report</string>
    <string name="successUpdatingReport">Report was updated successfully</string>
    <string name="noConnection">Could not connect to the server</string>
    <string name="createdYou">Created by you</string>
    <string name="crratedOther">Created by another</string>
    <string name="createdBy2">Created by:</string>
    <string name="you">You</string>
    <string name="another">Another</string>
    <string name="restoreImage">Restore image</string>
</resources>