<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8C8D7"
    tools:context=".activities.MainActivity">

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/loggedCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:layout_marginBottom="20dp"
        android:onClick="login"
        android:text="@string/login"
        android:textSize="@dimen/loginBtnTextSize"
        app:backgroundTint="@color/material_on_background_emphasis_medium"
        app:layout_constraintBottom_toTopOf="@+id/notesBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/notesBtn"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="55dp"
        android:layout_marginBottom="60dp"
        android:onClick="moveToNotes"
        android:text="@string/seeNotes"
        android:textSize="@dimen/loginBtnTextSize"
        app:backgroundTint="@color/material_on_background_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="@dimen/dialogTitle"
        app:layout_constraintBottom_toTopOf="@+id/editUsername"
        app:layout_constraintStart_toStartOf="@+id/editUsername"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/dialogTitle"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        tools:text="@string/password" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/titleSize"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/app_name" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="153dp"
        android:layout_height="152dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toTopOf="@+id/editUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <CheckBox
        android:id="@+id/loggedCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/keepMeLogged"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/editPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>